tests/ui/missing_return.gopp
package main
func f(x int) int { //~ ERROR function f: missing return
    if x > 0 { return 1 }
}
func main() {}
